--- a/hidden-circles.html
+++ b/hidden-circles.html
@@ -6,6 +6,7 @@
     <link href="styles.css" rel="stylesheet"/>
     <script src="scripts/jquery-3.6.0.min.js"></script>
     <script src="scripts/game.js"></script>
+    <script src="scripts/game-states.js"></script>
     <script src="scripts/strings.js"></script>
 </head>
 
