--- a/hidden-circles.html
+++ b/hidden-circles.html
@@ -5,9 +5,11 @@
     <title>Hidden Circles</title>
     <link href="styles.css" rel="stylesheet"/>
     <script src="scripts/jquery-3.6.0.min.js"></script>
-    <script src="scripts/game.js"></script>
-    <script src="scripts/game-states.js"></script>
     <script src="scripts/strings.js"></script>
+    <script src="scripts/variables.js"></script>
+    <script src="scripts/buttons.js"></script>
+    <script src="scripts/mechanics.js"></script>
+    <script src="scripts/main.js"></script>
 </head>
 
 <body>
