improved score processing and css

--- a/hidden-circles.html
+++ b/hidden-circles.html
@@ -29,21 +29,31 @@
 
     <div class="menu">
 
-        <h1>Hidden Circles</h1>
-        <p class="score" id="score">Score: 0</p>
-        <p class="score" id="highscore">High Score: 0</p>
-        <button class="play button" onclick="playClicked()" id="enabled-button">Play Game</button>
-        <button class="share button" onclick="shareClicked()" id="enabled-button">Share Score</button>
-        <label for="ball-size">Ball Size</label>
-        <input type="range" id="ball-size" min="20" max="80" step="20" value="40">
-
-        <h2>How To Play</h2>
-        <p>After memorising the position of the circles, press the button above to begin.</p>
-        <p>Try to click on the location of the circles. If you succeed, the circle will reappear green.</p>
-        <p>After you successfully click on one circle, you can press the button above to reset the circles if you've forgotten the location of the rest of them.</p>
-        <p>If you manage to get all five circles in a single round, this is called a "Quintuple", and you are rewarded with five bonus points.</p>
-        <p>If you miss, the game ends.</p>
-
+        <div class="score-container">
+            <h1>Hidden Circles</h1>
+            <p class="score" id="score">Score: 0</p>
+            <p class="score" id="highscore">High Score: 0</p>
+        </div>
+        <div class="buttons-container">
+            <button class="play button" onclick="playClicked()" id="disabled-button">Play Game</button>
+            <div class="share-options-container">
+                <button class="share button" onclick="shareClicked()" id="enabled-button">Share Score</button>
+                <button class="settings button" onclick="optionsClicked()" id="enabled-button">⚙️</button>
+            </div>
+            <label for="ball-size">Ball Size</label>
+            <div class="input-wrapper">
+                <input type="range" id="ball-size" min="20" max="100" step="20" value="40">
+            </div>
+        </div>
+        
+        <div class="how-to-play-container">
+            <h2>How To Play</h2>
+            <p>
+                Memorise the location of the circles and then after clicking play, try to click where the circles were to earn points.<br><br>
+                If you successfully click on all five circles you will be rewarded with bonus points.<br><br>
+                Try to get as many points as you can without missing!
+            </p>
+        </div>
     </div>
 
 
