--- a/hidden-circles.html
+++ b/hidden-circles.html
@@ -54,6 +54,8 @@
                 Try to get as many points as you can without missing!
             </p>
         </div>
+
+        <p class="footer"><a>squarefleet</a></p>
     </div>
 
 
