--- a/hidden-circles.html
+++ b/hidden-circles.html
@@ -90,7 +90,7 @@
             </div>
 
             <div class="option-container">
-                <label for="hs-reset">Enable Highscore Reset
+                <label for="hs-reset">Allow Highscore Reset
                     <input class="builtin-checkbox" type="checkbox" id="hs-reset" name="hs-reset" value="true">
                     <span class="checkbox"></span>
                 </label>
