added score toast and improved quintuple animation

--- a/hidden-circles.html
+++ b/hidden-circles.html
@@ -43,7 +43,10 @@
 
         <div class="score-container">
             <h1>Hidden Circles</h1>
-            <p class="score" id="score">Score: 0</p>
+            <div class="score-toast-container">
+                <p class="score" id="score">Score: 0</p>
+                <p class="toast" id="score-toast">+1</p>
+            </div>
             <p class="score" id="highscore">High Score: 0</p>
             <p class="mode">(ball size 2)</p>
         </div>
