added share score toast

--- a/hidden-circles.html
+++ b/hidden-circles.html
@@ -54,6 +54,7 @@
             <button class="play button" onclick="playClicked()" id="disabled-button">Start Game</button>
             <div class="share-options-container">
                 <button class="share button" onclick="shareClicked()" id="enabled-button">Share Score</button>
+                <p class="toast" id="share-toast">Copied to Clipboard!</p>
                 <button class="settings button" onclick="settingsClicked()" id="enabled-button">⚙️</button>
             </div>
             <label for="ball-size">Ball Size</label>
