--- a/hidden-circles.html
+++ b/hidden-circles.html
@@ -72,7 +72,7 @@
             </p>
         </div>
 
-        <p class="footer"><a>squarefleet</a></p>
+        <p class="footer"><a>@xen-oli-th</a></p>
     </div>
 
     <div class="settings-menu-wrapper">
