added css cursor settings

--- a/hidden-circles.html
+++ b/hidden-circles.html
@@ -87,6 +87,13 @@
             </div>
 
             <div class="option-container">
+                <label for="cursor-mode">Enable Crosshair Cursor
+                    <input class="builtin-checkbox" type="checkbox" id="cursor-mode" name="cursor-mode" value="true">
+                    <span class="checkbox"></span>
+                </label>
+            </div>
+
+            <div class="option-container">
                 <label for="grid-mode">Enable Grid (resets game)
                     <input class="builtin-checkbox" type="checkbox" id="grid-mode" name="grid-mode" value="true">
                     <span class="checkbox"></span>
