--- a/hidden-circles.html
+++ b/hidden-circles.html
@@ -111,6 +111,8 @@
                 <button class="button reset current" id="disabled-button" onclick="resetCurrent()">Wipe Highscore</button>
                 <button class="button reset all" id="disabled-button" onclick="resetAll()">Wipe ALL Highscores</button>
             </div>
+
+            <p class="footer">v1.0</p>
         </div>
     </div>
 
